# skillopt-harness

./: .gitignore  AGENTS.md  README.ja.md  README.ko.md  README.md  Taskfile.yml  pyproject.toml  skillopt-harness.code-workspace  skillopt.yaml
.codex/skills/code-repair/: SKILL.md
.codex/skills/data-normalization/: SKILL.md
.codex/skills/failure-to-fixture/: SKILL.md
.codex/skills/skillopt-loop/: SKILL.md
.codex/skills/skillopt-loop-runner/: SKILL.md
.codex/skills/skillopt-otel-investigation/: SKILL.md
.codex/subagents/: skill-loop-auditor.md  skill-target-repairer.md
docs/: opentelemetry.md
docs/superpowers/plans/: 2026-06-26-hard-fixtures.md
docs/superpowers/specs/: 2026-06-26-hard-fixtures-design.md  2026-06-26-skillopt-mvp-baseline-fixtures-design.md
examples/baselines/: code-repair-weak-baseline.md  data-normalization-weak-baseline.md
otel/: docker-compose.yaml
runs/code-repair-clean-loop/: current-best.md  initial-baseline.md
runs/code-repair-clean-loop/loop-01/: aggregated-edits.json  audit-handoff.md  audit-result.md  candidate-selection.jsonl  decision.md  full-loop-manifest.json  gate-decision.json  manifest.json  reflect-protocol.md  reflected-edits.json  rejected-edit-memory.md  train-rollouts.jsonl  train-trajectories.md  update-report.json
runs/code-repair-clean-loop/loop-01-inputs/: parent-selection.jsonl
skillopt_harness/: __init__.py  cli.py  config.py  evaluator.py  skill_loop.py  state.py  telemetry.py
tasks/: skillopt-dashboard.md
tests/: test_cli.py  test_fixtures.py  test_telemetry.py
(+168 files in other folders)
