[project]
name = "skillopt-harness"
version = "0.1.0"
description = "Manual code-repair workspace and grading harness."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
skillopt-harness = "skillopt_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.19",
]
